# RAG-notebook

./: ingestion.py  main.py  pyproject.toml  sample.py
backend/: core.py
